tests/snapshots/test_parser_snapshots__extract_class_declarations.snap
---
source: tests/test_parser_snapshots.rs
assertion_line: 66
expression: function_count
---
Ok(
    2,
)
