tests/snapshots/test_parser_snapshots__extract_class_methods.snap
---
source: tests/test_parser_snapshots.rs
assertion_line: 378
expression: "(\"function_count\", function_count, \"function_calls\", function_calls)"
---
(
    "function_count",
    Ok(
        7,
    ),
    "function_calls",
    Ok(
        7,
    ),
)
