tests/snapshots/test_parser_snapshots__extract_complex_class_structure.snap
---
source: tests/test_parser_snapshots.rs
expression: "(\"function_count\", function_count, \"import_count\", import_count)"
---
(
    "function_count",
    Err(
        DiagnosticError(
            Os {
                code: 3,
                kind: NotFound,
                message: "El sistema no puede encontrar la ruta especificada.",
            },
        ),
    ),
    "import_count",
    Err(
        DiagnosticError(
            Os {
                code: 3,
                kind: NotFound,
                message: "El sistema no puede encontrar la ruta especificada.",
            },
        ),
    ),
)
