tests/snapshots/test_parser_snapshots__extract_function_calls.snap
---
source: tests/test_parser_snapshots.rs
assertion_line: 97
expression: function_calls
---
Ok(
    2,
)
