tests/snapshots/test_parser_snapshots__extract_long_functions.snap
---
source: tests/test_parser_snapshots.rs
expression: long_functions
---
Ok(
    [
        LongFunction {
            file_path: "tests/test_data/long_function_test.ts",
            name: "veryLongMethod",
            line_start: 12,
            lines: 35,
            threshold: 30,
        },
    ],
)
