tests/snapshots/test_parser_snapshots__generic_types.snap
---
source: tests/test_parser_snapshots.rs
assertion_line: 574
expression: "(\"function_count\", function_count, \"function_calls\", function_calls)"
---
(
    "function_count",
    Ok(
        11,
    ),
    "function_calls",
    Ok(
        11,
    ),
)
