tests/snapshots/test_parser_snapshots__parse_error_handling.snap
---
source: tests/test_parser_snapshots.rs
assertion_line: 248
expression: normalized_result
---
Ok(1)
